# trianglegame

./: .gitignore  CMakeLists.txt  vcpkg.json
BLENDS/: MUSICMACHINE1.blend  MUSICMACHINE1.blend1  MUSICMACHINE1IDLE.blend  MUSICMACHINE1IDLE.blend1  TRIGUY.blend  TRIGUYIDLE.blend  TRIGUYWALK.blend
src/: Camera.cpp  Camera.h  PrecompHeader.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  Texture2DArray.cpp  Texture2DArray.h  Transform.cpp  Transform.h  main.cpp
src/comp/: AnimState.h  Behaviors.h  Direction.h  MusicMachine.h  Position.h  TriGuy.h
src/core/: App.cpp  App.h  AudioContext.cpp  AudioContext.h  Factories.cpp  Factories.h  Game.cpp  Game.h
src/sys/: Render.cpp  Render.h  TriGuyBehaviors.cpp  TriGuyBehaviors.h
src/util/: DirHelpers.h
